[package]
name = "sipusu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
bytes = "1.6.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0", features = ["derive"] }